# coolboy

./: .rustfmt.toml  Cargo.toml  README.md
src/: bus.rs  clock.rs  cpu.rs  device.rs  main.rs  mmu.rs  serial.rs
src/cpu/: mod.rs
src/cpu/instruct/: add.rs  cp.rs  cpl.rs  daa.rs  di.rs  ei.rs  halt.rs  jp.rs  jr.rs  ld.rs  mod.rs  or.rs  pop.rs  rla.rs  rlca.rs  rra.rs  rrca.rs  sbc.rs  stop.rs
src/instruct/: adc.rs  add.rs  and.rs  ccf.rs  cp.rs  cpl.rs  daa.rs  dec.rs  inc.rs  ld.rs  mod.rs  nop.rs  or.rs  push.rs  sbc.rs  scf.rs  sub.rs  xor.rs
src/mbc/: mbc0.rs  mbc1.rs  mod.rs
